Concat Opeartor demo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>RXJS Practice App</h1>
 
-<a href="#" id="addData">Add Data</a>
+<!-- <a href="#" id="addData">Add Data</a> -->
 
 
 <!-- <app-unsubscribe-observable></app-unsubscribe-observable> -->
