--- a/src/app/component/operators/operators.component.html
+++ b/src/app/component/operators/operators.component.html
@@ -1,9 +1,8 @@
-<p>operators works!</p>
+<!-- <p>operators works!</p>
 <ul>
     <li routerLink="buffer">Load buffer</li>
 </ul>
 
-<!-- Buffer -->
 <button  (click)="setInterval()">Start Interval</button>
 <button id="btn">Trigger Operator</button>
 <button  (click)="startTakeUntil()">Start Take Until</button>
@@ -12,4 +11,4 @@
 </ul>
 <a href="#">Link Tag</a>
 
-<button id="debounce">Trigger Debouncing</button>
+<button id="debounce">Trigger Debouncing</button> -->
