--- a/src/app/component/test/posts/posts.component.html
+++ b/src/app/component/test/posts/posts.component.html
@@ -1,1 +1,5 @@
-<p>posts works!</p>
+<div *ngIf="posts.length">
+    <div *ngFor="let post of posts">
+        <app-single-post [post]="post" (delete)="deletePost($event)"></app-single-post>
+    </div>
+</div>
