--- a/src/app/component/test/posts/posts.component.html
+++ b/src/app/component/test/posts/posts.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="posts.length">
-    <div *ngFor="let post of posts">
+    <div *ngFor="let post of posts"  class="posts">
         <app-single-post [post]="post" (delete)="deletePost($event)"></app-single-post>
     </div>
 </div>
