Implmented Transfer List using TypeScript Transfer List

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
 <!-- <app-unsubscribe-observable></app-unsubscribe-observable> -->
 <app-posts></app-posts>
 <app-operators></app-operators>
+<app-drag-drop></app-drag-drop>
